# LocalSolana

./: .gitignore
localsolana/: Cargo.toml
localsolana/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
solana-movie-frontend/: package-lock.json
solana-movie-frontend/components/: WalletContextProvider.tsx
solana-movie-frontend/utils/: constants.ts
solana-movie-token-client/src/: index.ts
